--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <td width="700" align="left" valign="bottom">
                 <font size="6"><b>　Dラエモン教授（超嘘）のポエム</b></font><br><br>
                 <font size="3">
-                    　古代の謎にAIを駆使し挑むおっさ（げふんげふん）。<br>
-                    　ポエムとそれっぽいデータを用意した。堪能あれ！
+                    　偉大なる先人に感謝を。あなた方の莫大な資料があるからこそAIと対話できた<br>
+                    　小生は、古代の謎にAIを駆使し挑むおっさ（げふんげふん）考古学者である。<br>
+                    　ポエムとそれっぽいデータを用意した。御堪能あれ！
                 </font>
             </td>
         </tr>
@@ -55,10 +56,9 @@
     <table width="900" border="0">
         <tr>
             <td align="center">
-                管理：Dラエモン教授<br>
+                管理：Dラエモン教授　　協力：Gemini (AI連携)<br>
                 <font size="2">
                 Copyright (c) 2026 D-Raemon Professor. All Rights Reserved. (超嘘)<br>
-                協力：Gemini (AI連携)
                 </font>
             </td>
         </tr>
