--- a/page4.html
+++ b/page4.html
@@ -24,11 +24,10 @@
                 <hr noshade color="#daa520" size="1">
 
                 <p>
-                ダマスカスについて手ごたえを感じれなかった私は、AIに新たなる謎を求めた。そしてファイストスの円盤へたどり着く<br><br>
-
+                ダマスカスについて手ごたえを感じなかった小生は、AIに新たなる謎を求めた。そしてファイストスの円盤へたどり着く<br><br>
                 正直にわかの小生にはまったくわからぬものであった故。それは何？からはじまったのである。今回はあえて現物をみないという視点から進めた。<br>
-                当然難航を極め、提示した説がことくごとく崩された私はアプローチ方法を変えることにしたのであった。<br>
-                今回はポエムする余裕はなかったが、満足を得られる結果を得ることができたのでそれを提示する。
+                当然難航を極め、提示した説がことくごとく崩された小生はアプローチ方法を変えることにしたのであった。<br>
+                今回はポエムする余裕はなかったが、十分以上の成果を得ることができたのでそれを提示する。
 
 </p>
 
