--- a/page5.html
+++ b/page5.html
@@ -24,8 +24,8 @@
                 <hr noshade color="#daa520" size="1">
 
                 <p>
-                円盤は難産であったが、AIと私はとうとうそれっぽい可能性を手にした。満足である。かなりいい線いってないか？<br><br>
-                こほん。それはさておき、同じ地中海といえばあれである。やはりローマは逃せない！<br>
+                円盤は難産であったが、AIと小生はとうとうそれっぽい可能性を手にした。満足である。かなりいい線いってないか？<br><br>
+                こほん。それはさておき、同じ地中海といえばアレである。やはりローマは逃せない！<br>
                 というこでローマンコンクリートについて調査することにした。今回はポエム感あるはず<br>
                 ふむ。これはローマンコンクリートについて語るならばアレについても語らねばなるまい...<br>  
                 サブタイトル間違えた？と思ってる人は安心して欲しい。読めばわかる<br>              
