--- a/index2.html
+++ b/index2.html
@@ -33,17 +33,13 @@
                         <td>
                             <font size="5"><b>【展示目録】</b></font><br><br>
                             <font size="4">
-                            1. <a href="page1.html">マヤ文明との共鳴<br>　 -楔（くさび）と円環、あるいは定数への回帰-</a><br>
-                            2. <a href="page2.html">アンティキティラの機械<br>　 -ギリシャ神話との共演を添えて-</a><br>
-                            3. <a href="page3.html">ダマスカス鋼<br>　  -距離と偶然が産んだ奇跡と悲劇-</a><br>
-                            4. <a href="page4.html">ファイストスの円盤<br>　  -ミノス文明の王権を示す最後のメダル-</a><br>
-                            5. <a href="page5.html">ローマンコンクリート<br>　  -古代ローマ人の経験と観察の勝利-</a><br>
+                            6. <a href="page6.html">ロンゴロンゴ文字<br>　  -極限の環境が産んだOSシフト-</a>
                             <br>
                             <center>
                                 <font size="4">
-                                    <b>[1]</b> &nbsp;
-                                    <a href="index2.html">[2]</a> &nbsp;
-                                    <a href="index2.html">次へ >></a>
+                                    <a href="index.html">[1]</a> &nbsp;
+                                    <b>[2]</b> &nbsp;
+                                    <b>次へ >></b>
                                 </font>
                             </center>
                             </font>
