--- a/page6.html
+++ b/page6.html
@@ -26,7 +26,7 @@
                 <p>
                 ローマンコンクリートはいいポエムができた。光と影と将来をうまく表現できただろうか？<br>
                 さて、次なるテーマをAIに問うと、ロンゴロンゴ文字という選択肢を提示してきた。<br>
-                他にもいくつかあったが、私は語呂に興味を惹かれて選択することにしたのであった。<br>
+                他にもいくつかあったが、小生は語呂に興味を惹かれて選択することにしたのであった。<br>
                 ぶっちゃけ円盤よりやばかったかもしれないが、AIとの対話を通じて用心深くキーワードを拾い上げ、<br>  
                 掘り下げていく過程で、ロンゴロンゴ文字を語る上でイースターの歴史は避けて通れないと感じた。<br>
                 とりあえず今はAI解析資料として提示する。<br>               
