--- a/page6.html
+++ b/page6.html
@@ -29,7 +29,7 @@
                 他にもいくつかあったが、小生は語呂に興味を惹かれて選択することにしたのであった。<br>
                 ぶっちゃけ円盤よりやばかったかもしれないが、AIとの対話を通じて用心深くキーワードを拾い上げ、<br>  
                 掘り下げていく過程で、ロンゴロンゴ文字を語る上でイースターの歴史は避けて通れないと感じた。<br>
-                とりあえず今はAI解析資料として提示する。<br>               
+                とりあえず今はAI解析した結果を提示する。<br>               
                 </p>
 <pre>
 </pre>
