--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,9 @@
                         <td>
                             <font size="5"><b>【展示目録】</b></font><br><br>
                             <font size="4">
-                            6. <a href="page6.html">ロンゴロンゴ文字<br>　  -極限の環境が産んだOSシフト-</a>
+                            6. <a href="page6.html">ロンゴロンゴ文字<br>　  -極限の環境が産んだOSシフト-</a><br>
+                            7. <a href="page7.html">ヴォイニッチ手稿<br>　  -直感の防壁-</a><br>
+                            8. <b>バグダッド電池&nbsp;公開日未定</b><br>
                             <br>
                             <center>
                                 <font size="4">
