--- a/page7.html
+++ b/page7.html
@@ -62,21 +62,25 @@ ITバブルは「失敗を糧に現実になった」
 <pre>
 本章では、ヴォイニッチ手稿を「解読対象」ではなく「情報学的現象」として定義する。
 
-1. 期待という名の脆弱性15世紀に誕生して以来、ルドルフ2世からヴォイニッチに至るまで、歴代の所有者は
-  「高貴な知識がある」という前提を疑わなかった。
-   この「価値があるはずだ」というバグにも似た期待が、600年間のバトンリレーを支えてきた。
+1. 期待という名の脆弱性
+   15世紀に誕生して以来、ルドルフ2世からヴォイニッチに至るまで、歴代の所有者は「高貴な知識がある」
+   という前提を疑わなかった。この「価値があるはずだ」というバグにも似た期待が、600年間のバトンリレー
+   を支えてきた。
 
-2. 鏡としての機能（ミラーリング）本稿は、統計的には自然言語の特徴を備えつつも、意味のプロトコルが
-   完全に欠落している。医学者には薬草書に見え、天文学者には宇宙論に見える。中身が「定義」を返さない
+2. 鏡としての機能（ミラーリング）
+   本稿は、統計的には自然言語の特徴を備えつつも、意味のプロトコルが完全に欠落している。
+   医学者には薬草書に見え、天文学者には宇宙論に見える。中身が「定義」を返さない
    ため、全ての解釈は解読者の脳内にある知識の反射（リフレクション）に過ぎない。
 
-3. ITバブルとの決定的差異比較対象変遷のプロセス現在の姿ITバブル失敗と衝突を繰り返し、
-   現実のインフラへとアップデートされた。「失敗を糧に現実になった」ヴォイニッチ手稿は
-   600年間、一度もアップデートされず、解釈の無限ループを強いる。「失敗を糧に神秘であり続ける」
+3. ITバブルとの決定的差異
+   比較対象変遷のプロセス現在の姿ITバブル失敗と衝突を繰り返し、現実のインフラへと
+   アップデートされた。「失敗を糧に現実になった」ヴォイニッチ手稿は600年間、
+   一度もアップデートされず、解釈の無限ループを強いる。「失敗を糧に神秘であり続ける」
 
-4. 結論：観測者による拒絶本稿に深入りすることは、解読ではなく、600年分の人間の残滓（欲）を吸い込んだ
-   悪魔への加担に等しい。真の知性とは、解けない謎を解くことではなく、「解いてはならない迷宮」の
-   入り口で引き返す決断を下すことにある。
+4. 結論：観測者による拒絶
+   本稿に深入りすることは、解読ではなく、600年分の人間の残滓（欲）を吸い込んだ悪魔への加担に等しい。
+   真の知性とは、解けない謎を解くことではなく、「解いてはならない迷宮」の入り口で引き返す決断を
+   下すことにある。
 
 【補遺：知性の限界に関する皮肉】
 
