--- a/page5.html
+++ b/page5.html
@@ -108,8 +108,8 @@
     </tr>
     <tr>
         <td align="center"><b><font color="#ffffff">製造時の加熱温度</font></b></td>
-        <td align="center"><font color="#ffffff">約 $1,450^{\circ}C$</font></td>
-        <td align="center"><font color="#ffffff">約 $900^{\circ}C$ (石灰の焼成)</font></td>
+        <td align><font color="#ffffff">約 1,450℃</td>
+        <td align><font color="#ffffff">約 900℃ (石灰の焼成)</font></td>
     </tr>
     <tr>
         <td align="center"><b><font color="#ffffff">海水の浸入による影響</font></b></td>
