--- a/page6.html
+++ b/page6.html
@@ -264,7 +264,44 @@
 1863年のシステム・クラッシュにより、その正当なデコーダー（王と司祭）は失われたが、1870年に外部へ放流された「ハードウェア」と、島の土壌に残留した「マナ」は、依然としてその構造的な整合性を維持し続けている 。現在、我々が行っている解読の試みは、いわば「失われたログイン画面」を外側から再構成しようとする執念深いフォレンジック解析である 。  
 
 王の杖は今も沈黙している。しかし、その円環メディアの表面には、資源の枯渇、森林の消失、そして奴隷狩りという幾多のバグを乗り越えて生き残ろうとした、古代ラパ・ヌイのプログラマー（司祭）たちの最後の、そして最強の「ソースコード」が刻まれている。彼らが誇らしげに杖を海に放流したその意図は、150年の時を経て、我々という新たなデバッグ・ユニットによって、今まさに読み解かれようとしているのである 。  
+
+
+証言が矛盾した理由：階級によるプロトコルの断絶
+19世紀後半、ヤウセン司教らが島民にロンゴロンゴを読ませた際、証言が食い違った理由は以下の事実から説明できます。
+
+管理者の絶滅: 1863年に全島共通の「標準OS」を共有していた司祭層（マテ・ロンゴロンゴ）が絶滅したため、文字をデコードする正しいプロトコルが失われました 。
+
+方言とキャッシュ: 生き残った島民（メトロなど）は、一般民層として「自分の部族に伝わっていた断片的な記憶（キャッシュ）」しか持っていませんでした。そのため、同じ記号を見ても各々の部族の伝承を当てはめてしまい、内容がバラバラになりました。
+
+エラー出力: メトロが板を逆さまにして持っていることに気づかず「歌うように」読み続けた記録は、彼が文字を読んでいるのではなく、文字という「権威」を前にして脳内の音データを適当に再生していたことを示しています。
+
+以上の通り、王の杖を「根源的マスター・レジストリ」と定義する仮説は、15世紀の物理的崩壊から1863年のシステムクラッシュに至るまでの歴史的事実と論理的な矛盾なく整合する。
 </pre>
+追記:Dラエモンより
+<div align="center"><font color="#daa520"><b>【証言が矛盾した理由：階級によるプロトコルの断絶】</b></font></div>
+<br>
+19世紀後半、ヤウセン司教らが島民にロンゴロンゴを読ませた際、証言が食い違った理由は以下の事実から説明できる。
+</pre>
+<table width="100%" border="1" bordercolor="#daa520" cellpadding="10" cellspacing="0" style="border-collapse:collapse; background-color:#000000; margin-top:10px; margin-bottom:10px;">
+    <tr bgcolor="#2a2a4e">
+        <th width="20%"><font color="#f0f0f0">事象</font></th>
+        <th width="80%"><font color="#f0f0f0">システム的解釈と現状</font></th>
+    </tr>
+    <tr>
+        <td align="center"><b><font color="#ffffff">管理者の絶滅</font></b></td>
+        <td><font color="#ffffff">1863年に全島共通の「標準OS」を共有していた司祭層（マテ・ロンゴロンゴ）が絶滅したため、文字をデコードする正しいプロトコルが失われた。</font></td>
+    </tr>
+    <tr>
+        <td align="center"><b><font color="#ffffff">方言とキャッシュ</font></b></td>
+        <td><font color="#ffffff">生き残った島民（メトロなど）は、一般民層として「自分の部族に伝わっていた断片的な記憶（キャッシュ）」しか持っていなかった。そのため、同じ記号を見ても各々の部族の伝承を当てはめてしまい、内容がバラバラになった。</font></td>
+    </tr>
+    <tr>
+        <td align="center"><b><font color="#ffffff">エラー出力</font></b></td>
+        <td><font color="#ffffff">メトロが板を逆さまにして持っていることに気づかず「歌うように」読み続けた記録は、彼が文字を読んでいるのではなく、文字という「権威」を前にして脳内の音データを適当に再生していたことを示す。</font></td>
+    </tr>
+</table>
+<pre>
+以上の通り、王の杖を「根源的マスター・レジストリ」と定義する仮説は、15世紀の物理的崩壊から1863年のシステムクラッシュに至るまでの歴史的事実と論理的な矛盾なく整合する。
                         </td>
                     </tr>
                 </table>
@@ -283,7 +320,7 @@
         <tr>
             <td align="center">
                 <font size="5">
-                <a href="page5.html">第5章へ</a> ｜ <a href="index.html">博物館トップ</a> ｜ <a href="page6.html">第7章へ</a>
+                <a href="page5.html">第5章へ</a> ｜ <a href="index.html">博物館トップ</a> ｜ <a href="page7.html">第7章へ</a>
                 </font>
             </td>
         </tr>
