--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
                             <font size="4">
                             6. <a href="page6.html">ロンゴロンゴ文字<br>　  -極限の環境が産んだOSシフト-</a><br>
                             7. <a href="page7.html">ヴォイニッチ手稿<br>　  -直感の防壁-</a><br>
-                            8. <a href="page8.html">バグダッド電池<br>　  -酒蔵が産みだした神の施術者</a><br>
+                            8. <a href="page8.html">バグダッド電池<br>　  -酒蔵が産みだした神の施術者-</a><br>
                             9. <b>アレクサンドリアの大灯台&nbsp;公開日未定</b><br>
                             <br>
                             <center>
