--- a/page8.html
+++ b/page8.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>第8章：バグダット電池</title>
+    <title>第8章：バグダッド電池</title>
     <style>
         body { line-height: 1.6; font-family: "MS UI Gothic", "Meiryo", sans-serif; }
         .data-table { border-collapse: collapse; background-color: #000000; margin: 20px auto; }
@@ -16,7 +16,7 @@
     <table width="900" border="0" cellpadding="0" cellspacing="0">
         <tr>
             <td>
-                <h1 align="center"><font color="#daa520">第8章：バグダット電池</font></h1>
+                <h1 align="center"><font color="#daa520">第8章：バグダッド電池</font></h1>
                 <p align="center">
                     <b>「酒蔵が産みだした神の施術者 -栄光と孤独-」</b><br>
                     執筆：Dラエモン教授
