--- a/page5.html
+++ b/page5.html
@@ -62,7 +62,7 @@
 <br>
 </pre>
 
-               <div align="center"><font size="5" color="#daa520"><b>◆ AI解析報告書 ◆</b></font></div>
+               <div align="center"><font size="5" color="#daa520"><b>◆ AI調査報告書 ◆</b></font></div>
                <br>
                <table width="100%" border="1" bordercolor="#444444" cellpadding="20" cellspacing="0">
                    <tr>
