--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
                             6. <a href="page6.html">ロンゴロンゴ文字<br>　  -極限の環境が産んだOSシフト-</a><br>
                             7. <a href="page7.html">ヴォイニッチ手稿<br>　  -直感の防壁-</a><br>
                             8. <a href="page8.html">バグダッド電池<br>　  -酒蔵が産みだした神の施術者-</a><br>
-                            9. <b>アレクサンドリアの大灯台&nbsp;公開日未定</b><br>
+                            9. <a href="page9.html">アレクサンドリアの大灯台<br>　  -王と技術者たちの傑作-</a><br>
                             <br>
                             <center>
                                 <font size="4">
