--- a/page9.html
+++ b/page9.html
@@ -23,12 +23,12 @@
                 </p>
                 <hr noshade color="#daa520" size="1">
                 <p>
-                いやぁヴォイニッチ手稿は強敵でしたね（吐血<br>
-                されど小生の古代ミステリーへの情熱は絶えず。次のテーマはバグダッド電池である。これも強敵の予感がする。<br>
-                案の定AIに質問すると、うん電池であるな。いやいやそれでは話が進まない<br>
-                そこで小生は、電池が副葬品として埋葬されていた"彼"の墓に視点を変えた<br>
-                すると面白い可能性が浮かび上がってきたのである。<br>
-                今回はAI解析結果をそのまま掲載する。既にポエムのような出来である故。<br>                   
+                バグダッド電池は"彼"の物語となった。これでよかったのだ<br>
+                さて、次は原点に戻ってアレクサンドリアの大灯台について語るとしようか。名前は聞いたことがある。有名だ<br>
+                AIとの対話を始めた私は当時のその規模に驚いた。これを紀元前に建ててしまったのかと<br>
+                内部もまさに最先端といったところで現在においても遜色ない技術の数々<br>
+                なのに現在は水中にその痕跡をわずかに残すのみ<br>
+                何があったのか？小生は謎を追う事にした。<br>                   
                 </p>
                <div align="center"><font size="5" color="#daa520"><b>◆ AI調査報告書 ◆</b></font></div>
                <br>
