--- a/page8.html
+++ b/page8.html
@@ -28,7 +28,8 @@
                 案の定AIに質問すると、うん電池であるな。いやいやそれでは話が進まない<br>
                 そこで小生は、電池が副葬品として埋葬されていた"彼"の墓に視点を変えた<br>
                 すると面白い可能性が浮かび上がってきたのである。<br>
-                今回はAI解析結果をそのまま掲載する。既にポエムのような出来である故。<br>                   
+                今回はAI解析結果をそのまま掲載する。既にポエムのような出来である故。<br><br>
+                謝罪：バグダッドは現在の地名であって本来はクテシフォン郊外が正であるが、本章ではバグダッドと記載する<br><br>                
                 </p>
                <div align="center"><font size="5" color="#daa520"><b>◆ AI調査報告書 ◆</b></font></div>
                <br>
