--- a/page10.html
+++ b/page10.html
@@ -279,7 +279,7 @@
             <td><font color="#ffffff">魔術の正体は「機械」ですらなく、沈黙した「石壁」へ回帰</font></td>
         </tr>
     </tbody>
-</table
+</table>
 <pre>
 第六章：結論
 
