--- a/index2.html
+++ b/index2.html
@@ -54,7 +54,7 @@
                 </table>
             </td>
             <td width="350" align="right" valign="top">
-                <img src="professor_mini.jpg" width="320" style="border: 1px solid #daa520;">
+                <img src="professor_mini2.jpg" width="320" style="border: 1px solid #daa520;">
             </td>
         </tr>
     </table>
