--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
                                     <a href="index.html">[1]</a> &nbsp;
                                     <b>[2]</b> &nbsp;
                                     <a href="index3.html">[3]</a> &nbsp;
-                                    <b>[番外]</b> &nbsp;
+                                    <a href="index_ex1.html">[番外]</a> &nbsp;
                                     <a href="index3.html">次へ >></a>
                                 </font>
                             </center>
