--- a/index3.html
+++ b/index3.html
@@ -40,7 +40,7 @@
                                     <a href="index.html">[1]</a> &nbsp;
                                     <a href="index2.html">[2]</a> &nbsp;
                                     <b>[3]</b> &nbsp;
-                                    <b>[番外]</b> &nbsp;
+                                    <a href="index_ex1.html">[番外]</a> &nbsp;
                                     <b>次へ >></b>
                                 </font>
                             </center>
