--- a/page6.html
+++ b/page6.html
@@ -320,7 +320,7 @@
         <tr>
             <td align="center">
                 <font size="5">
-                <a href="page5.html">第5章へ</a> ｜ <a href="index.html">博物館トップ</a> ｜ <a href="page7.html">第7章へ</a>
+                <a href="page5.html">第5章へ</a> ｜ <a href="index2.html">博物館トップ</a> ｜ <a href="page7.html">第7章へ</a>
                 </font>
             </td>
         </tr>
