--- a/page7.html
+++ b/page7.html
@@ -109,7 +109,7 @@ ITバブルは「失敗を糧に現実になった」
         <tr>
             <td align="center">
                 <font size="5">
-                <a href="page6.html">第6章へ</a> ｜ <a href="index.html">博物館トップ</a> ｜ <a href="page8.html">第8章へ</a>
+                <a href="page6.html">第6章へ</a> ｜ <a href="index2.html">博物館トップ</a> ｜ <a href="page8.html">第8章へ</a>
                 </font>
             </td>
         </tr>
