--- a/page8.html
+++ b/page8.html
@@ -312,7 +312,7 @@
         <tr>
             <td align="center">
                 <font size="5">
-                <a href="page6.html">第7章へ</a> ｜ <a href="index.html">博物館トップ</a> ｜ <a href="page9.html">第9章へ</a>
+                <a href="page6.html">第7章へ</a> ｜ <a href="index2.html">博物館トップ</a> ｜ <a href="page9.html">第9章へ</a>
                 </font>
             </td>
         </tr>
