--- a/page9.html
+++ b/page9.html
@@ -274,7 +274,7 @@
         <tr>
             <td align="center">
                 <font size="5">
-                <a href="page8.html">第8章へ</a> ｜ <a href="index.html">博物館トップ</a> ｜ <a href="page10.html">第10章へ</a>
+                <a href="page8.html">第8章へ</a> ｜ <a href="index2.html">博物館トップ</a> ｜ <a href="page10.html">第10章へ</a>
                 </font>
             </td>
         </tr>
