--- a/index_ex1.html
+++ b/index_ex1.html
@@ -33,19 +33,17 @@
                         <td>
                             <font size="5"><b>【展示目録】</b></font><br><br>
                             <font size="4">
-                            1. <a href="page1.html">マヤ文明との共鳴<br>　 -楔（くさび）と円環、あるいは定数への回帰-</a><br>
-                            2. <a href="page2.html">アンティキティラの機械<br>　 -ギリシャ神話との共演を添えて-</a><br>
-                            3. <a href="page3.html">ダマスカス鋼<br>　  -距離と偶然が産んだ奇跡と悲劇-</a><br>
-                            4. <a href="page4.html">ファイストスの円盤<br>　  -ミノス文明の王権を示す最後のメダル-</a><br>
-                            5. <a href="page5.html">ローマンコンクリート<br>　  -古代ローマ人の経験と観察の勝利-</a><br>
+                            1. <a href="page_ex1.html">宇宙的郷愁またはちっぽけな真理<br>　  -全ての原点-</a><br>
+                            2. <a href="page_ex2.html">ちっぽけな真理&nbsp;外伝<br>　  -符号する残滓-</a><br>
+                            3. <a href="page_ex3.html">マリアナ海溝怪音事件<br>　  -未知なる海洋-</a><br>
                             <br>
                             <center>
                                 <font size="4">
-                                    <b>[1]</b> &nbsp;
+                                    <a href="index.html">[1]</a> &nbsp;
                                     <a href="index2.html">[2]</a> &nbsp;
                                     <a href="index3.html">[3]</a> &nbsp;
-                                    <a href="index_ex1.html">[番外]</a> &nbsp;
-                                    <a href="index2.html">次へ >></a>
+                                    <b>[番外]</b> &nbsp;
+                                    <b>次へ >></b>
                                 </font>
                             </center>
                             </font>
