--- a/page10.html
+++ b/page10.html
@@ -307,7 +307,7 @@
         <tr>
             <td align="center">
                 <font size="5">
-                <a href="page9.html">第9章へ</a> ｜ <a href="index.html">博物館トップ</a> ｜ <a href="page11.html">第11章へ</a>
+                <a href="page9.html">第9章へ</a> ｜ <a href="index2.html">博物館トップ</a> ｜ <a href="page11.html">第11章へ</a>
                 </font>
             </td>
         </tr>
