--- a/page10.html
+++ b/page10.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>第10章：デンダラ灯台</title>
+    <title>第10章：デンデラ灯台</title>
     <style>
         body { line-height: 1.6; font-family: "MS UI Gothic", "Meiryo", sans-serif; }
         .data-table { border-collapse: collapse; background-color: #000000; margin: 20px auto; }
@@ -16,7 +16,7 @@
     <table width="900" border="0" cellpadding="0" cellspacing="0">
         <tr>
             <td>
-                <h1 align="center"><font color="#daa520">第10章：デンダラ灯台</font></h1>
+                <h1 align="center"><font color="#daa520">第10章：デンデラ灯台</font></h1>
                 <p align="center">
                     <b>「神話が語る新技術 -現存する世界最古級の共犯関係-」</b><br>
                     執筆：Dラエモン教授
@@ -27,7 +27,7 @@
                 歴史上においてもトップクラスの傑作であったといえる。しかし当時の先端技術の集大成＋規模という超高難易度が祟り、<br>
                 脅威の耐久性ですら歴史の藻屑と消え去っていった。諸行無常である。<br>
                 紀元前の本気を生身で見たかった。小生がはじめて海外に行くとしたら、きっとこの灯台を見るためだったであろう<br>
-                それはさておき、同じ灯台ということでもう１つ。デンダラ灯台というキーワードを得た私は早速調査を開始したのだが...<br>
+                それはさておき、同じ灯台ということでもう１つ。デンデラ灯台というキーワードを得た私は早速調査を開始したのだが...<br>
                 うん。思っていたのと何か違った。なので１０章らしく、当時の歴史的背景も踏まえた"おさらい"とすることにしよう<br>                  
                 </p>
                <div align="center"><font size="5" color="#daa520"><b>◆ AI調査報告書 ◆</b></font></div>
@@ -36,13 +36,13 @@
                    <tr>
                        <td bgcolor="#000000">
 <pre>
-古代地中海における技術の神話化と政治的流用：酒蔵説に基づくデンダラ灯台の再構築
+古代地中海における技術の神話化と政治的流用：酒蔵説に基づくデンデラ灯台の再構築
 
 序論：実務から生まれた「しびれ」とその政治的変容
 
-古代における「電気」の発見は、純粋な科学的探究の成果ではなく、地中海貿易の現場における「補修と劣化」という日常的な実務の産物であった。本報告書では、酒蔵で偶発的に発生したガルバニ現象（酒蔵説）を起点とし、その物理現象がいかにしてエジプトの神殿において巨大な「神話的図像（デンダラ灯台）」へと捏造・昇華されたのかを検討する 。  
+古代における「電気」の発見は、純粋な科学的探究の成果ではなく、地中海貿易の現場における「補修と劣化」という日常的な実務の産物であった。本報告書では、酒蔵で偶発的に発生したガルバニ現象（酒蔵説）を起点とし、その物理現象がいかにしてエジプトの神殿において巨大な「神話的図像（デンデラ灯台）」へと捏造・昇華されたのかを検討する 。  
 
-このプロセスは、現場の知恵を独占した「実務家（バグダッド）」と、その噂を巨額予算の獲得に流用した「政治家としての神官（デンダラ）」という、技術のアップサイジング（誇張）と古典化の歴史である。
+このプロセスは、現場の知恵を独占した「実務家（バグダッド）」と、その噂を巨額予算の獲得に流用した「政治家としての神官（デンデラ）」という、技術のアップサイジング（誇張）と古典化の歴史である。
 
 第一章：技術的起源としての酒蔵説
 
@@ -145,11 +145,11 @@
 <pre>
 第三章：最新技術の古典化（神話化）の諸相
 
-デンダラ灯台の事例は、当時の神官たちが「外来の最新知見をエジプト伝統の秘術としてパッケージングする」という組織的ビジネスモデルを持っていたことを示す一例に過ぎない。
+デンデラ灯台の事例は、当時の神官たちが「外来の最新知見をエジプト伝統の秘術としてパッケージングする」という組織的ビジネスモデルを持っていたことを示す一例に過ぎない。
 
-3.1 デンダラ・ゾディアック（天文学の古典化）
+3.1 デンデラ・ゾディアック（天文学の古典化）
 
-デンダラ神殿の屋上chapelにある有名な「十二星座」のレリーフは、実際にはメソポタミア（バビロニア）由来の天文学知見を完全にコピーしたものである。
+デンデラ神殿の屋上chapelにある有名な「十二星座」のレリーフは、実際にはメソポタミア（バビロニア）由来の天文学知見を完全にコピーしたものである。
 </pre>
 <table width="100%" border="1" bordercolor="#daa520" cellpadding="10" cellspacing="0" style="border-collapse:collapse; background-color:#000000; margin-top:10px; margin-bottom:10px; font-family: sans-serif;">
     <thead>
@@ -171,7 +171,7 @@
             <td><font color="#ffffff">「ローカライズ」による外来色の払拭と神話的同化</font></td>
         </tr>
         <tr>
-            <td align="center"><b><font color="#ffffff">デンダラの星座図</font></b></td>
+            <td align="center"><b><font color="#ffffff">デンデラの星座図</font></b></td>
             <td><font color="#ffffff">神殿天井への「古来の宇宙観」としての配置</font></td>
             <td><font color="#ffffff">神官たちの権威強化と、歴史の連続性の捏造</font></td>
         </tr>
@@ -257,7 +257,7 @@
 <pre>
 5.2 結末：輝きを失った灯台
 
-この締め付けにより、神官たちが維持してきた「古代の秘術（デンダラ灯台）」というハッタリは、その資金源を失って崩壊した。
+この締め付けにより、神官たちが維持してきた「古代の秘術（デンデラ灯台）」というハッタリは、その資金源を失って崩壊した。
 </pre>
 <table width="100%" border="1" bordercolor="#daa520" cellpadding="10" cellspacing="0" style="border-collapse:collapse; background-color:#000000; margin-top:10px; margin-bottom:10px; font-family: sans-serif;">
     <thead>
@@ -283,11 +283,11 @@
 <pre>
 第六章：結論
 
-デンダラ灯台のレリーフは、失われた超科学の証拠ではなく、地中海貿易の「実務（酒蔵の偶然）」から得た知見を、政治的生存のために「神格化・誇張（捏造）」した記録である。
+デンデラ灯台のレリーフは、失われた超科学の証拠ではなく、地中海貿易の「実務（酒蔵の偶然）」から得た知見を、政治的生存のために「神格化・誇張（捏造）」した記録である。
 
 神官たちは、バグダッドの実務家がひっそりと独占していた「しびれ」や、バビロニアの学者が計算した「天の運行」を、王から予算を引き出すための「看板」へと書き換えた。しかし、そのビジネスモデルはローマという冷徹な管理者の登場によって、監査という現実の前に破綻したのである。
 
-「デンダラ灯台の光は、電圧ではなく、エジプトの富とプトレマイオスの政治力によって輝いていた」
+「デンデラ灯台の光は、電圧ではなく、エジプトの富とプトレマイオスの政治力によって輝いていた」
 </pre>
                         </td>
                     </tr>
