--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
                             7. <a href="page7.html">ヴォイニッチ手稿<br>　  -直感の防壁-</a><br>
                             8. <a href="page8.html">バグダッド電池<br>　  -酒蔵が産みだした神の施術者-</a><br>
                             9. <a href="page9.html">アレクサンドリアの大灯台<br>　  -王と技術者たちの傑作-</a><br>
-                            10. <a href="page10.html">デンダラ灯台<br>　  -神話が語る新技術-</a><br>
+                            10. <a href="page10.html">デンデラ灯台<br>　  -神話が語る新技術-</a><br>
                             <br>
                             <center>
                                 <font size="4">
