--- a/index3.html
+++ b/index3.html
@@ -34,6 +34,7 @@
                             <font size="5"><b>【展示目録】</b></font><br><br>
                             <font size="4">
                             11. <a href="page11.html">インダス文明<br>　  -王を抱かぬ都-</a><br>
+                            12. <a href="page12.html">プマ・プンク<br>　  -石と冶金-</a><br>
                             <br>
                             <center>
                                 <font size="4">
